--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load orders_template_tags %}
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
 {% block sidebar %}
     {% include 'include/_sidebar_orders.html' %}
@@ -305,6 +306,8 @@
         </div>
     </div>
     <br><br>
+       TYT!
+       {{ item }}
     <nav aria-label="...">
         <ul class="pagination">
             {% if page_obj.has_previous %}
@@ -322,16 +325,16 @@
                     </li>
                 {% elif p > page_obj.number|add:-5 and p < page_obj.number|add:5 %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ p }}&filter={{ filter }}">{{ p }}</a>
+                        <b><a class="page-link" href="?{% url_replace request page=p %}">{{ p }}</a></b>
                     </li>
                 {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}&filter={{ filter }}">Следующая</a>
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}&filter={{ filter }}&category= {{ item.category_id }}">Следующая</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&filter={{ filter }}"> В конец &raquo;</a>
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&filter={{ filter }}&category= {{ item.category_id }}"> В конец &raquo;</a>
                 </li>
             {% endif %}
         </ul>
