--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -169,7 +169,7 @@
                 {% for item in main_list %}
                 {% if forloop.counter == 1 %}
                         <div class="d-flex align-items-center mb-2">
-                            <a id="list-{{ item.id }}" data-bs-toggle="list" href="#id-list-{{ item.id }}" role="tab" aria-controls="home" class="active text-gray-900 text-hover-primary fs-2 fw-bold me-1">Заказ {{ item.id }}</a>
+                            <a id="list-{{ item.id }}" data-bs-toggle="list" href="#id-list-{{ item.id }}" role="tab" aria-controls="home" class="active text-gray-900 text-hover-primary fs-2 fw-bold me-1">№ {{ item.id }}</a>
                             {% if item.category_id == 2 %}
                             <div class="bullet bullet-dot me-2 h-10px w-10px" style="background-color:{{ item.status__color }};"></div>
                             {% endif %}
@@ -186,7 +186,7 @@
                 {% else %}
                         <div class="d-flex align-items-center mb-2">
 
-                            <a id="list-{{ item.id }}" data-bs-toggle="list" href="#id-list-{{ item.id }}" role="tab" aria-controls="home" class="text-gray-900 text-hover-primary fs-2 fw-bold me-1">Заказ {{ item.id }}</a>
+                            <a id="list-{{ item.id }}" data-bs-toggle="list" href="#id-list-{{ item.id }}" role="tab" aria-controls="home" class="text-gray-900 text-hover-primary fs-2 fw-bold me-1">№ {{ item.id }}</a>
                             {% if item.category_id == 2 %}
                             <div class="bullet bullet-dot me-2 h-10px w-10px" style="background-color:{{ item.status__color }};"></div>
 
