--- a/plugins/templates/plugins/plugins_test_view.html
+++ b/plugins/templates/plugins/plugins_test_view.html
@@ -6,6 +6,32 @@
 {% endblock %}
 
 {% block content %}
+
+{% if 'default_category_is_none' in models_check.error %}
+    <!--begin::Alert-->
+<div class="alert alert-success d-flex align-items-center p-5">
+    <!--begin::Icon-->
+    <i class="ki-duotone ki-shield-tick fs-2hx text-success me-4"><span class="path1"></span><span class="path2"></span></i>
+    <!--end::Icon-->
+
+    <!--begin::Wrapper-->
+    <div class="d-flex flex-column">
+        <!--begin::Title-->
+        <h4 class="mb-1 text-dark">Обновление базы данных</h4>
+        <!--end::Title-->
+
+        <!--begin::Content-->
+        <span>Автоматически была создана запись категории приложений по умолчанию</span>
+        <!--end::Content-->
+    </div>
+    <!--end::Wrapper-->
+</div>
+<!--end::Alert-->
+
+
+
+{% endif %}
+
 Количество приложений указаных в базе данных: {{ сountPluginDB }}
 <br><br>
 {% for k, v in plugins_check.items %}
