--- a/orders/templates/include/_order_status_changer.html
+++ b/orders/templates/include/_order_status_changer.html
@@ -1,90 +1,46 @@
 {% block javascript %}
     <script>
     $(document).ready(function () {
-
-            $(document).on('click', '#list-item-{{ widget.name }}', function(e){
-               $('#ajax_input_{{ widget.name }}').val( $(this).text().trim());
-
-
-            });
-
-            $('#ajax_input_{{ widget.name }}').keyup(function () {
-                console.log('{{ widget.name }}')
+             $(document).on('change', '#update_status', function() {
+                var status = $(this).val();
+                alert(status);
                 // create an AJAX call
                 $.ajax({
                     data: $(this).serialize(), // get the form data
-                    url: "{% url 'ajax_request' %}?model={{ widget.name }}",
+                    url: "{% url 'ajax_request' %}?method=update_status&id={{ id }}&status="+status,
                     // on success
                     success: function (response) {
-                        console.log('{{ widget.name }}')
+                        console.log(status)
                         if (response.is_exist == true) {
-                            //console.log('DEVICE')
-                            $("#ajax-{{ widget.name }}").text(response.is_taken.name);
-                            var dataList = document.getElementById('{{ widget.name }}');
-                            var input = document.getElementById('ajax_input_{{ widget.name }}');
-                            var request = new XMLHttpRequest();
-                            // Обрабатываем изменение состояния для запроса.
-                            // Парсируем JSON
-                            // Перебираем через цикл массив JSON.
-                            document.getElementById('{{ widget.name }}').innerHTML = '';
-                            response.is_taken.forEach(function(item) {
-
-                            //jsonOptions.forEach(function(response) {
-                                    // Создаем новый элемент <option>.
-                                    var option = document.createElement('option');
-                                    // Устанавливаем значение, используя элементы массива JSON.
-                                    //option.data-value = item.id;
-                                    option.value = item.name;
-                                    option.text = item.name;
-                                    console.log(item)
-                                    // Добавляем элемент <option> к <datalist>.
-                                    dataList.appendChild(option);
-                                  });
-
-                                  // Обновляем текст заполнителя.
-                            input.placeholder = "e.g. datalist";
-
-
-                            // Обновляем текст заполнителя.
-                            input.placeholder = "Введите название...";
-
-                            // Настраиваем и выполняем запрос.
-                            //request.open('GET', 'html-elements.json', true);
-                            //request.send();
-
-
+                            console.log(response.is_taken)
                         }
-                        //else {
-                        //     $("#ajax-{{ widget.name }}").text('Нет в базе');
-                        //}
                     },
                     // on error
                     error: function (response) {
                         // alert the error if any error occured
+                        console.log(response.is_taken)
                         console.log(response.responseJSON.errors)
                     }
                 });
                 return false;
             });
-
-            $('#ajax_input_{{ widget.name }}').on('change', function(){
-                console.log($('#'+$(this).attr('list')).find('option[value="'+$(this).val()+'"]').text())
-                $('#'+$(this).attr('list')).find('option[value="'+$(this).val()+'"]').text()
-                $("#ajax-{{ widget.name }}").text($('#'+$(this).attr('list')).find('option[value="'+$(this).val()+'"]').text());
-            });
 })
-
     </script>
 {% endblock javascript %}
 
 <style>
- .option:hover { color: var(—hover-color) }
+select option:hover{
+  color: var(--hover-color);
+}
+select option:checked {
+    box-shadow: 0 0 10px 100px #5ab738 inset;
+}
 </style>
-
-<select style="color:{{ current_satus.color }};" class="selectpicker" >
-  <option style="color:{{ current_satus.color }};">{{ current_satus }}</option>
+id = {{ id }}
+<select id="update_status" class="selectpicker" >
+  <option style="color:{{ current_satus.color }};">{{ current_satus }} {{ current_satus.color }}</option>
   {% for status in all_status %}
-      <option style="—hover-color: {{ status.color }};">{{ status }}</option>
+      <option style="--hover-color:red;">{{ status }} {{ status.color }}</option>
   {% endfor %}
 </select>
 
