--- a/plugins/templates/plugins/plugins_detail_view.html
+++ b/plugins/templates/plugins/plugins_detail_view.html
@@ -16,7 +16,7 @@
             <p class="card-text">{{ plugins_item.description }}</p>
         </div>
 
-        {% load plugin_tags %}
+        {% load plugin_detail_tags %}
         {% action_plugin plugins_item.id tag form %}
 
 
