--- a/plugins/templates/plugins/plugins_test_view.html
+++ b/plugins/templates/plugins/plugins_test_view.html
@@ -27,9 +27,27 @@
     <!--end::Wrapper-->
 </div>
 <!--end::Alert-->
+{% endif %}
+{% if 'default_related_format_is_none' in relatedformat_check.error %}
+    <!--begin::Alert-->
+<div class="alert alert-success d-flex align-items-center p-5">
+    <!--begin::Icon-->
+    <i class="ki-duotone ki-shield-tick fs-2hx text-success me-4"><span class="path1"></span><span class="path2"></span></i>
+    <!--end::Icon-->
 
+    <!--begin::Wrapper-->
+    <div class="d-flex flex-column">
+        <!--begin::Title-->
+        <h4 class="mb-1 text-dark">Обновление списка связанных форматов</h4>
+        <!--end::Title-->
 
-
+        <!--begin::Content-->
+        <span>Автоматически были созданы записи связанных форматов по умолчанию</span>
+        <!--end::Content-->
+    </div>
+    <!--end::Wrapper-->
+</div>
+<!--end::Alert-->
 {% endif %}
 
 Количество приложений указаных в базе данных: {{ сountPluginDB }}
