--- a/plugins/templates/plugins/plugins_detail_view.html
+++ b/plugins/templates/plugins/plugins_detail_view.html
@@ -15,9 +15,8 @@
         <div class="card-body">
             <p class="card-text">{{ plugins_item.description }}</p>
         </div>
-
         {% load plugin_detail_tags %}
-        {% action_plugin plugins_item.id tag form %}
+        {% action_plugin plugins_item.id tag form_related form_relatedformat %}
 
 
         <div class="card-footer text-muted">
