--- a/owm/templates/store.html
+++ b/owm/templates/store.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}{{ title }} - {{ block.super }}{% endblock %}
+{% block content %}
+    {% for offer_id, count in stock.items %}
 
-</body>
-</html>
+        {{ offer_id }}: {{ count }}<br>
+    {% endfor %}
+{% endblock %}
