--- a/owm/templates/owm/create.html
+++ b/owm/templates/owm/create.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block title %}{{ title }} - {{ block.super }}{% endblock %}
+{% block sidebar %}
+    {% include 'include/_sidebar_owm.html' %}
+{% endblock %}
 {% block content %}
     <form action="#" method="POST">
     {% csrf_token %}
