--- a/owm/templates/owm/enter.html
+++ b/owm/templates/owm/enter.html
@@ -4,7 +4,7 @@
     {% include 'include/_sidebar_owm.html' %}
 {% endblock %}
 {% block content %}
-    <h1>ОПРИХОДОВАНИЕ</h1>
+    <h1>ОПРИХОДОВАНИЕ MoySklad + Ozon + Wb + Market</h1>
     <form action="#" method="POST">
         <button type="submit" class="btn btn-primary btn-block">Обновить</button>
         {% for offer_id, value in stock.items %}
