--- a/owm/templates/owm/inventory.html
+++ b/owm/templates/owm/inventory.html
@@ -4,7 +4,7 @@
     {% include 'include/_sidebar_owm.html' %}
 {% endblock %}
 {% block content %}
-    <h1>ИНВЕНТАРИЗАЦИЯ</h1>
+    <h1>ИНВЕНТАРИЗАЦИЯ MoySklad + Ozon + Wb + Market</h1>
     <form action="#" method="POST">
         <button type="submit" class="btn btn-primary btn-block">Установить api</button>
         {% for offer_id, value in stock.items %}
