--- a/owm/templates/owm/price_ozon.html
+++ b/owm/templates/owm/price_ozon.html
@@ -16,6 +16,9 @@
 				<th>Цена</th>
 				<th>Акционная цена</th>
 				<th>Доставка</th>
+                <th>Оптовая</th>
+                <th>Прибыль</th>
+                <th>Продано (пред. месяц)</th>
 			</tr>
 		</thead>
 
@@ -31,6 +34,15 @@
                 </td>
 				<td>{{ value.marketing_seller_price }}</td>
 				<td>{{ value.delivery_price }}</td>
+                <td>{{ value.opt_price }}</td>
+                <td>{{ value.profit_price }}
+                    {% if value.profit_percent > 0 %}
+                        (<span style="color:#5ab738">{{ value.profit_percent }}%</span>)
+                    {% else %}
+                        (<span style="color:#ff2b4a">{{ value.profit_percent }}%</span>)
+                    {% endif %}
+                </td>
+                <td>{{ value.sale_qty }}</td>
 			</tr>
         {% endfor %}
         		</tbody>
