--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -1,4 +1,4 @@
-<a href="{% url 'enter' %}">Оприходование</a><br><br>
-<a href="{% url 'inventory' %}">Инвентаризация</a><br><br>
-<a href="{% url 'price_ozon' %}">Цены озон</a><br><br>
+<a href="{% url 'enter' %}">Оприходование FBS</a><br><br>
+<a href="{% url 'inventory' %}">Инвентаризация FBS</a><br><br>
+<a href="{% url 'price_ozon' %}">Цены озон FBS</a><br><br>
 <a href="{% url 'create' %}">Api ключи</a><br><br>
