--- a/plugins/templates/plugins/sidebar_plugins_tags.html
+++ b/plugins/templates/plugins/sidebar_plugins_tags.html
@@ -34,7 +34,7 @@
 												<!--begin:Menu item-->
 												<div class="menu-item">
 													<!--begin:Menu link-->
-													<a class="menu-link" href="#">
+													<a class="menu-link" href="{% url 'view_plugins' %}">
 														<span class="menu-bullet">
 															<span class="bullet bullet-dot"></span>
 														</span>
