--- a/templates/include/_nav.html
+++ b/templates/include/_nav.html
@@ -24,7 +24,7 @@
                                                 <div class="menu-item">
                                                     <a href="{% url 'user_home' %}" class="menu-link">
                                                         <span class="menu-icon">
-                                                            <i class="bi bi-bar-chart fs-3"></i>
+                                                            <i class="fa-solid fa-user-astronaut"></i>
                                                         </span>
                                                         <span class="menu-title">Пользователи</span>
                                                     </a>
@@ -34,7 +34,7 @@
                                                 <div class="menu-item">
                                                     <a href="{% url 'view_plugins' %}" class="menu-link">
                                                         <span class="menu-icon">
-                                                            <i class="bi bi-bell fs-3"></i>
+                                                            <i class="fa-solid fa-layer-group"></i>
                                                         </span>
                                                         <span class="menu-title">Плагины</span>
                                                     </a>
@@ -44,7 +44,7 @@
                                                 <div class="menu-item">
                                                     <a href="{% url 'view_repository' %}" class="menu-link">
                                                         <span class="menu-icon">
-                                                            <i class="bi bi-calendar-event fs-3"></i>
+                                                            <i class="fa-solid fa-download"></i>
                                                         </span>
                                                         <span class="menu-title">Репозиторий</span>
                                                     </a>
