--- a/plugins/templates/include/_plugins_detail_tags.html
+++ b/plugins/templates/include/_plugins_detail_tags.html
@@ -53,21 +53,36 @@
         <div class="card-footer">
         <h1>Позиции дизайна</h1>
              {% for obj in isDesignRelatedPlugin %}
-                 Позиция {{ obj.position }}:
+                  <br>Позиция <h2>{{ obj.position }}</h2>
             <div class="col-md-3">
+                    Приложения
                     {% for item in obj.related_many_plugin.all %}
+                        - {{ item }}<br>
+                    {% endfor %}
+                    Формат дизайна
+                    {% for item in obj.related_format.all %}
                         - {{ item }}<br>
                     {% endfor %}
 
             <br>
-            Указать позицию дизайна:
+
                 <form action="{{ plugins_item.get_absolute_url }}designposition" method="POST">
                     {% csrf_token %}
+                    Указать приложение:
                     {{ form_designposition.non_field_errors }}
                     {{ form_designposition.as_p }}
                     <input type="hidden" name="position" value="{{ obj.position }}" />
                     <button type="submit" name="designposition_add" class="btn btn-primary btn-block">Добавить</button>
                     <button type="submit" name="designposition_del" class="btn btn-primary btn-block">Убрать</button>
+                </form>
+                <form action="{{ plugins_item.get_absolute_url }}relatedformat" method="POST">
+                    {% csrf_token %}
+                    Указать формат:
+                    {{ form_relatedformat.non_field_errors }}
+                    {{ form_relatedformat.as_p }}
+                    <input type="hidden" name="position" value="{{ obj.position }}" />
+                    <button type="submit" name="relatedformat_add" class="btn btn-primary btn-block">Добавить</button>
+                    <button type="submit" name="relatedformat_del" class="btn btn-primary btn-block">Убрать</button>
                 </form>
             </div>
          {% endfor %}
