--- a/orders/templates/include/_order_status_changer.html
+++ b/orders/templates/include/_order_status_changer.html
@@ -12,6 +12,7 @@
                         if (response.is_exist == true) {
                             var BackgroundColor=response.color;
                             var statusColor = document.getElementsByClassName("status_color_{{ id }}");
+                            console.log(statusColor)
                             statusColor[0].style.backgroundColor=BackgroundColor;
                             statusColor[1].style.backgroundColor=BackgroundColor;
                             console.log('ajax response true')
