--- a/orders/templates/orders/orders_list.html
+++ b/orders/templates/orders/orders_list.html
@@ -171,24 +171,15 @@
                         <div class="d-flex align-items-center mb-2">
                             <a id="list-{{ item.id }}" data-bs-toggle="list" href="#id-list-{{ item.id }}" role="tab" aria-controls="home" class="active text-gray-900 text-hover-primary fs-2 fw-bold me-1">№ {{ item.id }}</a>
                             {% if item.category_id == 2 %}
-                            <div id="status_color_{{ item.id }}" class="status_color_{{ item.id }} bullet bullet-dot me-2 h-10px w-10px" style="background-color:{{ item.status__color }};"></div>
+                            <div class="status_color_{{ item.id }} tyt bullet bullet-dot me-2 h-10px w-10px" style="background-color:{{ item.status__color }};"></div>
                             {% endif %}
-                            {% for related_item in related_list %}
-                                {% if related_item.related_uuid and item.uuid__related_uuid == related_item.uuid and related_item.related_use == 'form' %}
-                                    {% if related_item.warning %}
-                                        {% if related_item.warning == 'red' %}
-                                            <i class="fa-solid fa-dollar-sign text-danger"></i>
-                                        {% endif %}
-                                    {% endif %}
-                                {% endif %}
-                             {% endfor %}
                         </div>
                 {% else %}
                         <div class="d-flex align-items-center mb-2">
 
                             <a id="list-{{ item.id }}" data-bs-toggle="list" href="#id-list-{{ item.id }}" role="tab" aria-controls="home" class="text-gray-900 text-hover-primary fs-2 fw-bold me-1">№ {{ item.id }}</a>
                             {% if item.category_id == 2 %}
-                            <div class="bullet bullet-dot me-2 h-10px w-10px" style="background-color:{{ item.status__color }};"></div>
+                            <div class="status_color_{{ item.id }} bullet bullet-dot me-2 h-10px w-10px" style="background-color:{{ item.status__color }};"></div>
 
                             {% for related_item in related_list %}
                                 {% if related_item.related_uuid and item.uuid__related_uuid == related_item.uuid and related_item.related_use == 'form' %}
@@ -252,35 +243,11 @@
 
         <!-- Related data -->
         {% for related_item in related_list %}
-                {% if related_item.related_uuid and item.uuid__related_uuid == related_item.uuid and related_item.related_use == 'form' %}
-                            {% if related_item.warning %}
-                                {% if related_item.warning == 'red' %}
-                                    <!--begin::Alert-->
-                                    <br>
-                                    <div class="alert alert-dismissible bg-light-danger d-flex flex-column flex-sm-row p-0 mb-0">
-                                        <!--begin::Icon-->
-
-                                        <!--end::Icon-->
-
-                                        <!--begin::Wrapper-->
-                                        <div class="d-flex flex-column pe-0 pe-sm-10">
-                                            <!--begin::Content-->
-                                            <span><i class="fa-brands fa-exclamation fs-4 me-2"></i><b>{{ related_item.module_name }}</b></span>
-                                            <!--end::Content-->
-                                        </div>
-                                        <!--end::Wrapper-->
-                                    </div>
-                                    <!--end::Alert-->
-                                {% endif %}
-                            {% else %}
-                                <br><b>{{ related_item.module_name }}</b><br>
-                            {% endif %}
+                {% if related_item.uuid and item.uuid__related_uuid == related_item.uuid and related_item.position == 'first'%}
+                            <br><b>{{ related_item.title }}</b><br>
                             {% for key, value in related_item.items %}
-                                {% if key != 'uuid' and key != 'html' and key != 'related_uuid' and key != 'module_name' and key != 'related_use' and key != 'warning' %}
-                                    {{ key }}: {{ value }}<br>
-                                {% endif %}
-                                {% if key == 'html'%}
-                                    {{ value | safe }}<br>
+                                {% if key != 'uuid' and key != 'related_uuid' and key != 'title' and key != 'position' %}
+                                    {{ key | safe }}: {{ value | safe }}<br>
                                 {% endif %}
                             {% endfor %}
 
@@ -290,14 +257,16 @@
     </div>
 
 <div class="card-footer">
-<b>Дополнительные данные</b><br>
                             {% for related_item in related_list %}
 
-                                    {% if related_item.related_uuid and item.uuid__related_uuid == related_item.uuid  and related_item.related_use == 'link' and related_item.position == 'second'%}
-                                        {{ related_item.html | safe }}<br>
-                                    {% endif %}
-                                    {% if related_item.related_uuid and item.uuid__related_uuid == related_item.uuid  and related_item.related_use == 'text'%}
-                                        {{ related_item.related_text }}<br>
+                                    {% if related_item.uuid and item.uuid__related_uuid == related_item.uuid  and related_item.position == 'second'%}
+                                        <b>{{ related_item.title }}</b><br>
+                                        {% for key, value in related_item.items %}
+                                            {% if key != 'uuid' and key != 'title' and key != 'position' %}
+                                                {{ key | safe }}: {{ value | safe }}<br>
+                                            {% endif %}
+                                        {% endfor %}
+                                        <br>
                                     {% endif %}
                             {% endfor %}
 
@@ -346,7 +315,7 @@
     </nav>
 											</div>
 
-
+{{ status_dict }}
                             {% for key, value in status_dict.items %}
                                 {% if key == 'warn3' and value %}
                                     Не выданные заказы более 3 дней:<br>
