--- a/owm/templates/owm/sidebar_menu.html
+++ b/owm/templates/owm/sidebar_menu.html
@@ -1,4 +1,6 @@
 <a href="{% url 'enter' %}">Оприходование FBS</a><br><br>
 <a href="{% url 'inventory' %}">Инвентаризация FBS</a><br><br>
-<a href="{% url 'price_ozon' %}">Цены озон FBS</a><br><br>
+<a href="{% url 'price_ozon' %}">Цены OZON</a><br><br>
+<a href="{% url 'price_wb' %}">Цены WB</a><br><br>
+<a href="{% url 'price_yandex' %}">Цены Yandex</a><br><br>
 <a href="{% url 'create' %}">Api ключи</a><br><br>
