--- a/plugins/templates/plugins/plugins_test_view.html
+++ b/plugins/templates/plugins/plugins_test_view.html
@@ -82,7 +82,8 @@
 Связанные форматы: присутствуют<br><br>
 {% endif %}
 
-Количество приложений указаных в базе данных: {{ сountPluginDB }}
+Количество приложений указаных в базе данных: {{ сountPluginDB }}<br>
+! если не работают связанные данные и позиции дизайна, установите demodata в плагине
 <br><br>
 {% for k, v in plugins_check.items %}
                 <div class="card" style="width: 18rem;">
