--- a/plugins/templates/plugins/plugins_test_view.html
+++ b/plugins/templates/plugins/plugins_test_view.html
@@ -88,7 +88,7 @@
 {% for k, v in plugins_check.items %}
                 <div class="card" style="width: 18rem;">
                     <div class="card-header">
-                        <h5 class="card-title">{{ k }}: {{ v.module }}</h5>
+                        <h5 class="card-title">{{ k }}: {{ v.models }}</h5>
                     </div>
                     <div class="card-body">
                         <p class="card-text">[ERROR] {{ v.text }}</p>
