--- a/ServiceCRM3/static/css/style.css
+++ b/ServiceCRM3/static/css/style.css
@@ -49,3 +49,51 @@ color: #9370db;
 .bs-callout-rosybrown h4 {
 color: #bc8f8f;
 }
+
+
+.table-bordered th, .table-bordered td {
+    border: 1px solid #dee2e6 !important; /* Добавляем границы ячеек */
+}
+
+.table thead th {
+    border-bottom: 2px solid #dee2e6; /* Устанавливаем более широкую границу для заголовка */
+}
+
+.col-offer-id {
+    white-space: nowrap;
+    width: 1% !important;     /* Гарантирует адаптацию ширины под содержимое */
+    text-align: left;
+}
+
+.col-stock, .col-price {
+    width: 200px !important;  /* Фиксирует ширину в 100px */
+    max-width: 200px !important; /* Ограничивает максимальную ширину */
+    text-align: center;
+    overflow: hidden;         /* Обрезает текст, если он выходит за границы */
+    white-space: nowrap;      /* Предотвращает перенос текста */
+}
+
+.table td, .table th {
+    vertical-align: middle;    /* Вертикально центрирует содержимое */
+}
+
+.custom-table {
+    display: grid;
+    grid-template-columns: min-content 200px 200px; /* Устанавливает ширину Offer ID по содержимому */
+    width: 100%; /* Полная ширина таблицы */
+}
+
+.custom-table thead, .custom-table tbody, .custom-table tr {
+    display: contents; /* Для правильного отображения в CSS Grid */
+}
+
+.custom-table th, .custom-table td {
+    border: 1px solid #dee2e6 !important;
+    padding: 8px;
+    text-align: center;
+}
+
+.custom-table th:first-child, .custom-table td:first-child {
+    text-align: left;
+    white-space: nowrap;
+}
