--- a/owm/templates/owm/enter.html
+++ b/owm/templates/owm/enter.html
@@ -4,7 +4,8 @@
     {% include 'include/_sidebar_owm.html' %}
 {% endblock %}
 {% block content %}
-    <h1>ОПРИХОДОВАНИЕ MoySklad + Ozon + Wb + Market</h1>
+    <h1>FBS ОПРИХОДОВАНИЕ MoySklad + Ozon + Wb + Market</h1>
+    <h2>Обновляются только остатки на мойсклад и на все маркетплейсы. Поле цены не работает</h2>
     {% if error %}
         Нет записи api
     {% endif %}
